# xnoise

./: .gitignore  .hgignore  .hgtags  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.markdown  autogen.sh  configure.ac  extract_strings.sh  package_chef.sh  taginfoconfig.h  xnoise.doap
bindings/c/: Makefile.am  taginfo_c.cc  taginfo_c.h  taginfo_c.pc.in
data/misc/: Makefile.am  libplaylist-1.0.pc.in  libxnoiseutils-1.0.pc.in  xnoise-1.0.pc.in  xnoise.desktop.in  xnoise.desktop.in.in
data/ui/: Makefile.am  add_media.ui  first_start.ui  lyrics.ui  main_ui.xml  main_window.ui  metadat_artist_album.ui  metadat_genre.ui  metadat_title.ui  metadata_album.ui  settings.glade  settings.ui  tracklist.ui  video.ui
libxnoise/: Makefile.am  org.gtk.xnoise.PlayerEngine.service  xnoise-1.0.deps  xnoise-1.0.h  xnoise-1.0.vapi  xnoise-main.vala
libxnoise-utils/: Makefile.am  libxnoiseutils-1.0.deps  libxnoiseutils-1.0.vapi  libxnoiseutils.h  pl-abstract-file-reader.vala  pl-item-collection.vala  pl-reader.vala  xnoise-pl-general.vala  xnoise-pl-item.vala  xnoise-simple-xml-node.vala  xnoise-simple-xml-reader.vala  xnoise-simple-xml-writer.vala
libxnoise-utils/ASX/: xnoise-pl-asx-file-reader.vala
libxnoise-utils/M3U/: pl-m3u-file-reader.vala  xnoise-pl-m3u-file-reader.vala
libxnoise-utils/PLS/: xnoise-pl-pls-file-reader.vala
libxnoise-utils/WPL/: xnoise-pl-wpl-file-reader.vala
libxnoise-utils/XSPF/: pl-xspf-file-reader.vala
libxnoise/AlbumImage/: xnoise-album-image.vala  xnoise-i-album-cover-image.vala
libxnoise/AlbumImages/: xnoise-album-image-loader.vala  xnoise-album-image.vala  xnoise-i-album-cover-image-provider.vala  xnoise-i-album-cover-image.vala
libxnoise/Application/: xnoise-application.vala
libxnoise/BackgroundWorker/: xnoise-worker.vala
libxnoise/DBus/: xnoise-dbus-image-extraction.vala  xnoise-dbus-thumbnailer.vala  xnoise-dbus.vala  xnoise-desktop-notifications.vala
libxnoise/DataSource/: xnoise-data-source.vala
libxnoise/Database/: xnoise-db-browser.vala  xnoise-db-creator.vala  xnoise-db-reader.vala  xnoise-db-writer.vala
libxnoise/Devices/: xnoise-audio-player-device.vala  xnoise-device-manager.vala  xnoise-device.vala
libxnoise/DockableMedia/: xnoise-dockable-dynamic-playlist.vala  xnoise-dockable-media-manager.vala  xnoise-dockable-media.vala
libxnoise/ExtDev/: xnoise-device-main-view.vala  xnoise-device-manager.vala  xnoise-device.vala  xnoise-i-audio-player-device.vala
libxnoise/ExtraWidgets/: xnoise-albumart-view.vala  xnoise-app-menu-button.vala  xnoise-cell-renderer-thumb.vala  xnoise-combo-media-selector.vala  xnoise-control-button.vala  xnoise-equalizer-widget.vala  xnoise-first-start-widget.vala  xnoise-main-view-notebook.vala  xnoise-media-selector.vala  xnoise-media-source-widget.vala  xnoise-play-pause-button.vala  xnoise-serial-button.vala  xnoise-thin-paned.vala  xnoise-trackinfo-bar.vala  xnoise-tree-media-selector.vala  xnoise-volume-slider-button.vala
libxnoise/GlobalAccess/: xnoise-global-access.vala
libxnoise/IconRepo/: xnoise-icon-cache.vala  xnoise-icon-repo.vala
libxnoise/ItemHandlers/: xnoise-external-queryable.vala  xnoise-item-converter.vala  xnoise-item-handler-manager.vala  xnoise-item-handler.vala  xnoise-item.vala  xnoise-playlist-queryable.vala  xnoise-tree-queryable.vala
libxnoise/Lyrics/: xnoise-i-lyrics-provider.vala  xnoise-i-lyrics.vala  xnoise-lyrics-loader.vala  xnoise-lyrics-view.vala
libxnoise/Main/: xnoise-main.vala
libxnoise/MainWindow/: xnoise-main-window.vala
libxnoise/MediaBrowser/: xnoise-media-browser-dockable.vala  xnoise-media-browser-model.vala  xnoise-media-browser.vala
libxnoise/MediaChangeDetector/: xnoise-media-change-detector.vala
libxnoise/MediaMonitor/: xnoise-media-monitor.vala
libxnoise/Models/: xnoise-media-browser-model.vala  xnoise-tracklist-model.vala
libxnoise/Parameter/: xnoise-i-params.vala  xnoise-parameter.vala
libxnoise/Player/: xnoise-gst-equalizer.vala  xnoise-gst-player.vala
libxnoise/Playlist/: xnoise-playlist-item.vala  xnoise-playlist-reader.vala
libxnoise/PlaylistReader/: xnoise-playlist-abstract-file-reader.vala  xnoise-playlist-entry.vala  (+3 more)
packaging/: Makefile.am
plugins/: Makefile.am
src/: Makefile.am  xnoise-1.0.vapi  xnoise-about.vala  xnoise-add-media-dialog.vala  xnoise-album-image-loader.vala  xnoise-album-image.vala  xnoise-app-starter.vala  xnoise-control-button.vala  xnoise-db-browser.vala  xnoise-db-creator.vala  xnoise-db-writer.vala  xnoise-global-access.vala  xnoise-gst-player.vala  xnoise-info-bar.vala  xnoise-item-converter.vala  xnoise-item-handler-manager.vala  xnoise-item-handler.vala  xnoise-item.vala  xnoise-lyrics-loader.vala  xnoise-lyrics-view.vala  xnoise-main-window.vala  xnoise-main.vala  xnoise-media-browser-model.vala  xnoise-media-browser.vala  xnoise-media-importer.vala  xnoise-misc.vala  xnoise-music-browser.vala  xnoise-music-dir-dialog.vala  xnoise-parameter.vala  xnoise-play-pause-button.vala  xnoise-plugin-interface.vala  xnoise-plugin-loader.vala  xnoise-plugin-manager-tree.vala  xnoise-plugin.vala  xnoise-settings-dialog.vala  xnoise-tag-artistalbum-editor.vala  xnoise-tag-reader.vala  xnoise-tag-title-editor.vala  xnoise-tag-writer.vala  xnoise-track-progressbar.vala  (+8 more)
taginfo/: Makefile.am  ape.h  ape_common.cc  ape_file.cc  ape_internal.h  ape_tag.cc  apeinfo.cc  asftaginfo.cc  flacinfo.cc  id3_common.cc  info.cc  mp3info.cc  mp4_common.cc  mp4info.cc  mpcinfo.cc  ogginfo.cc  taginfo.h  taginfo.pc.in  taginfo_internal.h  trueaudioinfo.cc  wavpackinfo.cc  xiph_common.cc
tests/: Makefile.am  test.vala
ui/: Makefile.am  add_folder.glade  add_folder.ui  main_window.glade  main_window.ui  settings.glade  settings.ui
utils/: Makefile.am  org.gtk.xnoise.ImageExtractor.service.in  org.gtk.xnoise.PlayerEngine.service  org.gtk.xnoise.PlayerEngine.service.in  xnoise-image-extractor-service.vala  xnoise_image_extractor_service
xnoise/: ChangeLog  MAINTAINERS  Makefile.am  NEWS  configure.ac
xnoise-plugins-core/: Makefile.am  NEWS  configure.ac  xnoise-plugins-core.doap
(+783 files in other folders)
